--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jest": "^26.4.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "superagent": "^6.0.0"
   }
 }
